[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Rtree"
authors = [
    {name = "Sean Gillies", email = "sean.gillies@gmail.com"},
]
maintainers = [
    {name = "Howard Butler", email = "howard@hobu.co"},
]
description = "R-Tree spatial index for Python GIS"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["gis", "spatial", "index", "r-tree"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Database",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://rtree.readthedocs.io"
Repository = "https://github.com/Toblerity/rtree"

[tool.setuptools]
packages = ["rtree"]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "rtree.__version__"}

[tool.setuptools.package-data]
rtree = ["lib", "py.typed"]

[tool.black]
target-version = ["py38", "py39", "py310", "py311", "py312"]
color = true
skip_magic_trailing_comma = true

[tool.cibuildwheel]
build = "cp38-*"
build-verbosity = "3"
repair-wheel-command = "python scripts/repair_wheel.py -w {dest_dir} {wheel}"
test-requires = "tox"
test-command = "tox --conf {project} --installpkg {wheel}"

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]
test-skip = "*aarch64"  # slow!
before-build = [
    "yum install -y cmake libffi-devel",
    "bash {project}/ci/install_libspatialindex.bash",
]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-build = [
    "apk add cmake libffi-dev",
    "bash {project}/ci/install_libspatialindex.bash",
]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
test-skip = "*-macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET="10.9" }
before-build = [
    "brew install coreutils cmake",
    "bash {project}/ci/install_libspatialindex.bash",
]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.coverage.report]
# Ignore warnings for overloads
# https://github.com/nedbat/coveragepy/issues/970#issuecomment-612602180
exclude_lines = [
    "pragma: no cover",
    "@overload",
]

[tool.isort]
profile = "black"
known_first_party = ["rtree"]
skip_gitignore = true
color_output = true

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
