[metadata]
name = Rtree
version = attr: rtree.__version__
url = https://github.com/Toblerity/rtree
author = Sean Gillies
author_email = sean.gillies@gmail.com
maintainer = Howard Butler
maintainer_email = howard@hobu.co
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: GIS
    Topic :: Database
license = MIT
description = R-Tree spatial index for Python GIS
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gis, spatial, index, r-tree

[options]
zip_safe = False
python_requires = >=3.7
install_requires =
    typing_extensions>=3.7;python_version<'3.8'
include_package_date = True
packages = rtree

[options.package_data]
rtree = lib, py.typed

[flake8]
max-line-length = 88
